2000-09-07  Lauris Kaplinski  <lauris@helixcode.com>

	* filter-editor.c, filter-filter.c, filter-folder.c, filter-option.c:
	* filter-rule.c, score-editor.c, vfolder-editor.c, vfolder-rule.c:
	More UTF-8 wrapping

2000-09-06  Jeffrey Stedfast  <fejj@helixcode.com>

	* filter-driver.c (filter_driver_run): Totally rewritten to filter
	a single message at a time instead of filtering a folder.

	* filter-message-search.c (filter_message_search): New convenience
	function for searching a message.

2000-08-24  Lauris Kaplinski  <lauris@helixcode.com>

	* filter-folder.c: Use e_utf8 wrappers

	* filter-input.c: Use e_utf8 wrappers

	* filter-rule.c: Use e_utf8 wrappers
	
2000-08-23  Dan Winship  <danw@helixcode.com>

	* filter-datespec.c (cal_day_selected): Set seltime.tm_isdst to
	-1, not daylight, because the current dst value is not relevant to
	the selected date.

2000-08-18  Peter Williams  <peterw@helixcode.com>

	* filter-driver.c (do_filter_mail): Unlink a new parameter, path_to_unlink,
	if it is empty once the mail is filtered. Fixes a race in 
	mail_tool_filter_contents_into.

	* filter-driver.h: Update the prototype.

2000-08-14  Ettore Perazzoli  <ettore@helixcode.com>

	* vfolder-editor.c (rule_add): Add translation marks and use stock
	buttons.
	(rule_edit): Likewise.

	* score-editor.c (rule_add): Add translation marks and use stock
	buttons.
	(rule_edit): Likewise.

	* rule-context.c (rule_context_add_rule_gui): Add translation
	marks and use stock buttons.

	* filter-part.c (main): Add translation marks and use
	stock buttons.

	* filter-folder.c (button_clicked): Add translation marks and use
	stock buttons.

	* filter-editor.c (rule_add): Add translation marks and use stock
	buttons.
	(rule_edit): Likewise.

	* filter-rule.c (get_widget): Add translation marks.

	* filter-filter.c (get_widget): Add translation marks.  Add
	padding to make it look like the buttons in `filter-rule.c'.

2000-08-17  Peter Williams  <peterw@helixcode.com>
